--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
             border: 1px solid var(--border-color);
             border-radius: 8px;
             padding: 1.5rem;
+            margin-bottom: 1rem;
         }
         
       .fear-entry-header {
@@ -522,7 +523,7 @@
             const totalSteps = 3; // Excluding welcome and summary
 
             const appData = {
-                fears:'',
+                fears:,
                 benefits: '',
                 cost6Months: '',
                 cost1Year: '',
