--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Навигатор "Fear-Setting"</title>
     <link rel="preconnect" href="[https://fonts.googleapis.com](https://fonts.googleapis.com)">
     <link rel="preconnect" href="[https://fonts.gstatic.com](https://fonts.gstatic.com)" crossorigin>
-    <link href="[https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap](https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap)" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-color: #3B82F6;
@@ -523,7 +523,7 @@
             const totalSteps = 3; // Excluding welcome and summary
 
             const appData = {
-                fears:,
+                fears:'',
                 benefits: '',
                 cost6Months: '',
                 cost1Year: '',
